--- a/index.html
+++ b/index.html
@@ -15,7 +15,34 @@
                 <p>Odin</p>
             </div>
         </div>
-        <div class="form_area">signup form</div>
+        <div class="form_area">
+            <div class="info_text">This is not a real online service! You know you need something like this in your life to help you realize your deepest dreams. Sign up <em>now</em> to get started.</div>
+            <div class="info_text">You <em>know</em> you want to.</div>
+            <div class="form_info" style="font-size: 3vh; font-weight: bold;">Let's do this!
+                <form>
+                    <div class="form_fields">
+                        <div>
+                            <label for="first_name">First Name</label>
+                            <input type="text" name="first_name" id="first_name">
+                            <label for="email">Email</label>
+                            <input type="email" name="email" id="email">
+                            <label for="password">Password</label>
+                            <input type="password" name="password" id="password" minlength="8">
+                        </div>
+                        <div>
+                            <label for="last_name">Last Name</label>
+                            <input type="text" name="last_name" id="last_name">
+                            <label for="phone_number">Phone Number</label>
+                            <input type="text" maxlength="10" name="phone_number" id="phone_number" pattern="(\d{10})">
+                            <label for="confirm_password">Confirm Password</label>
+                            <input type="password" name="confirm_password" id="confirm_password" minlength="8">
+                        </div>
+                    </div>
+                </form>
+            </div>
+            <button type="submit">Create Account</button>
+            <div class="login_text">Already have an account? <a href="">Log In</a></div>
+        </div>
     </div>
 </body>
 </html>
